--- a/cmd/tchaik/ui/static/sass/control-bar.scss
+++ b/cmd/tchaik/ui/static/sass/control-bar.scss
@@ -83,6 +83,7 @@ div.control-bar {
 
     span.icon {
       color: #999;
+      margin-top:-3px;
     }
 
     .title {
